canary-app-automatic/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: simple-rollout
spec:
  revisionHistoryLimit: 1
  replicas: 10
  selector:
    matchLabels:
      app: summer-k8s-app
  template:
    metadata:
      labels:
        app: summer-k8s-app
    spec:
      containers:
      - name: webserver-simple
        image: docker.io/containous/whoami:v1.4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    canary:
      canaryService: rollout-canary-preview
      stableService: rollout-canary-active
      #trafficRouting:
      #  traefik:
      #    weightedTraefikServiceName: traefik-service 
      steps:
      - setWeight: 30
      - pause: {duration: 2m}
      - setWeight: 60
      - pause: {duration: 2m}
      - setWeight: 100
      - pause: {duration: 2m}    
      analysis:
        templates:
        - templateName: simple-200-return
